objects/DBM_Report__c.object
<CustomObject>
    <description>Parent object for all details related to a single Dashboard Magic report</description>
    <fields>
        <fullName>Chart_Type__c</fullName>
        <label>Chart Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Report__c</fullName>
        <formula>IF(ISBLANK(Report_ID__c), &quot;Report not found&quot;,
HYPERLINK(&quot;/&quot; + Report_ID__c , &quot;Open Report&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Label__c</fullName>
        <label>Metric Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Type__c</fullName>
        <label>Metric Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Number</fullName>
                    <default>true</default>
                    <label>Number</label>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metric_type_enum__c</fullName>
        <formula>IF(CONTAINS(TEXT(Metric_Type__c), &quot;currency&quot;), &quot;currency&quot;,
  IF(CONTAINS(TEXT(Metric_Type__c), &quot;percent&quot;), &quot;percent&quot;,
    &quot;number&quot;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric type enum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Groupings__c</fullName>
        <label>Number of Groupings</label>
        <summaryForeignKey>DBM_Report_Grouping__c.Report__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Report_Folder_name__c</fullName>
        <label>Report Folder name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_ID__c</fullName>
        <label>Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>DBM Report</label>
    <nameField>
        <label>DBM Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DBM Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>